# malaria-prediction-backend

./: .auth-state.json  .claude-hooks-ignore  .dockerignore  .gitignore  .stop-allowed  .validation-performance.json  CLAUDE.md  CONTRIBUTING.md  CREDENTIALS_SETUP.md  DONE.json  Dockerfile  EXAMPLES.md  OPERATIONS_DASHBOARD_SUMMARY.md  QUICKSTART.md  README.md  TASKMANAGER-USAGE.md  TODO.json  claude-infinite-continue.json  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  mypy_continue.txt  mypy_current_state.txt  mypy_fresh.txt  mypy_latest.txt  mypy_output.txt  mypy_updated.txt  pyproject.toml  sync-taskmanager.js  taskmanager-api.js  test_healthcare_tools.py  test_healthcare_tools_comprehensive.py
.claude/: settings.json
.taskmanager-backups/: DatabaseManager.js.2025-11-03T15-37-52.backup  DatabaseManager.js.bak.2025-11-03T06-20-11.backup  FilePathSecurityValidator.js.2025-11-03T06-20-11.backup  FilePathSecurityValidator.js.bak.2025-11-03T07-42-38.backup  TaskIndexing.js.2025-11-03T15-03-32.backup  TaskIndexing.js.bak.2025-11-03T07-41-37.backup  TaskPerformance.js.2025-11-03T06-20-11.backup  TaskPerformance.js.bak.2025-11-03T15-37-52.backup  TaskStorage.js.2025-11-03T15-37-52.backup  TaskStorage.js.bak.2025-11-03T15-03-32.backup  VectorEmbeddingManager.js.2025-11-03T07-42-39.backup  VectorEmbeddingManager.js.bak.2025-11-03T15-03-32.backup  adaptiveLearningPaths.js.2025-11-03T15-03-32.backup  adaptiveLearningPaths.js.bak.2025-11-03T15-03-32.backup  agentManagement.js.2025-11-03T15-37-52.backup  agentManagement.js.bak.2025-11-03T15-37-52.backup  agentManager.js.2025-11-03T07-42-38.backup  agentManager.js.bak.2025-11-03T06-20-11.backup  agentRegistry.js.2025-11-03T06-20-11.backup  agentRegistry.js.bak.2025-11-03T07-41-37.backup  apiUtils.js.2025-11-03T06-20-11.backup  apiUtils.js.bak.2025-11-03T15-03-32.backup  appLogger.js.2025-11-03T07-42-39.backup  appLogger.js.bak.2025-11-03T15-37-52.backup  autoFixer.js.2025-11-03T07-41-37.backup  autoFixer.js.bak.2025-11-03T06-20-11.backup  bottleneck-analyzer.js.2025-11-03T15-37-52.backup  bottleneck-analyzer.js.bak.2025-11-03T07-42-39.backup  cliInterface.js.2025-11-03T15-37-52.backup  cliInterface.js.bak.2025-11-03T15-37-52.backup  compatibilityLayer.js.2025-11-03T07-41-37.backup  compatibilityLayer.js.bak.2025-11-03T07-41-37.backup  comprehensive-validation-test.js.2025-11-03T06-20-12.backup  comprehensive-validation-test.js.bak.2025-11-03T07-42-39.backup  criteriaManager.js.2025-11-03T06-20-11.backup  criteriaManager.js.bak.2025-11-03T15-37-52.backup  criteriaUtils.js.2025-11-03T07-42-39.backup  criteriaUtils.js.bak.2025-11-03T15-37-52.backup  crossProjectSharing.js.2025-11-03T06-20-11.backup  crossProjectSharing.js.bak.2025-11-03T15-37-52.backup  (+136 more)
MagicMock/: TODO.json
data/: TODO.json
data-source-test-reports/: 00-EXECUTIVE-SUMMARY.md  ACTION-PLAN.md  CREDENTIALS-AND-RATE-LIMITS.md  README.md
data-source-test-reports/chirps/: CHIRPS-REPORT.md
data-source-test-reports/era5/: ERA5-REPORT.md
data-source-test-reports/map/: MAP-REPORT.md
data-source-test-reports/modis/: MODIS-REPORT.md
data-source-test-reports/worldpop/: WORLDPOP-REPORT.md
data/map/: test_raster.tif
development/: general.md  linter-errors.md  taskmanager-api-guide.md
development/backups/: Old TODO.json  TODO_backup_20250804_223859.json
development/essentials/: ai-ml-data-sources.md  backend-only-data-policy.md  environmental-data-sources.md  features.md  flutter-frontend-architecture.md  task-requirements.md
development/reports/: DOCKER_DEPLOYMENT.md  ERA5_API_Documentation.md  lint-results.md  (+6 more)
disaster_recovery/: TODO.json  backup_orchestrator.py  business_continuity_plan.md  data_corruption_detector.py  disaster_recovery_tester.py  dr_scheduler.py  failover_orchestrator.py  requirements.txt
docker/: TODO.json  entrypoint.sh
docs/: PRE_COMMIT_GUIDE.md  README.md  TODO.json  map_client_usage.md  modis_usage.md
flutter_frontend/: .flutter-plugins-dependencies  README.md  pubspec.yaml
hooks/: ensure-setup.sh  lint-go.sh  lint-results-generator.sh  post-tool-feedback.sh  smart-lint.sh
k8s/: TODO.json  configmap.yaml  deployment.yaml  migration-job.yaml  secrets.yaml
logs/: TODO.json
malaria_frontend/: DONE.json  README.md  TODO.json  analysis_options.yaml  coverage_config.yaml  pubspec.yaml
migrations/: TODO.json  env.py
mlruns/: TODO.json
performance/: TODO.json  cache_optimization.py  ci_cd_integration.py  database_optimization.py  monitoring_dashboard.py  performance_monitor.py  run_performance_tests.py
scripts/: TODO.json  database_backup.py  database_maintenance.py  example_map_usage.py  init_database.py  run_tests.sh  test_operations_dashboard.py
src/: TODO.json  __init__.py
taskmanager/: agent-claim-task.sh  agent-init.sh  agent-list.sh  agent-register.sh  current-task.sh  task-add-file.sh  task-archive.sh  task-complete.sh  task-create.sh  task-list.sh  task-move-down.sh  task-move-up.sh  task-status.sh
tests/: README.md  TODO.json  __init__.py  conftest.py  test_alert_system_basic.py  test_alert_system_comprehensive.py  test_alert_system_final_validation.py  test_alert_system_simple_validation.py  test_alert_system_unit.py  test_alert_system_validation.py  test_api_auth_comprehensive.py  test_api_dependencies_comprehensive.py  test_api_main_comprehensive.py  test_auth_async_fixes.py  test_auth_comprehensive_enterprise.py  test_auth_isolated_fixes.py  test_auth_security.py  test_auth_security_old.py  test_auth_sql_injection_prevention.py  test_chirps_client.py  test_cli_basic.py  test_config.py  test_config_validation_complete.py  test_config_validation_coverage.py  test_config_validation_fixed.py  test_data_harmonization.py  test_data_processor.py  test_data_sources_comprehensive.py  test_database.py  test_database_basic.py  test_era5_client.py  test_era5_client_comprehensive.py  test_healthcare_tools.py  test_healthcare_tools_comprehensive.py  test_map_client.py  test_ml_models_comprehensive.py  test_models.py  test_models_comprehensive.py  test_models_final.py  test_models_working.py  (+18 more)
(+411 files in other folders)
